@@ -662,7 +662,7 @@ make install rhome=/usr/local/lib64/R-@value{VERSIONno}
 will use a version-specific @R{} home on a non-Debian Linux 64-bit
 system.
 
-If you have made @R{} as a shared library you can install it in
+If you have made @R{} as a shared/static library you can install it in
 your system's library directory by
 
 @example
@@ -671,10 +671,12 @@ make prefix=/path/to/here install-libR
 
 @noindent
 where @code{prefix} is optional, and @code{libdir} will give more
-precise control.  However, you should not install to a directory
-mentioned in @env{LDPATHS} (e.g.@: @file{/usr/local/lib64}) if you
-intend to work with multiple versions of @R{}, since that directory may
-be given precedence over that in other @R{} installations.
+precise control.@footnote{This will be needed if more than one
+sub-architecture is to be installed.}  However, you should not install
+to a directory mentioned in @env{LDPATHS} (e.g.@:
+@file{/usr/local/lib64}) if you intend to work with multiple versions of
+@R{}, since that directory may be given precedence over the @file{lib}
+directory of other @R{} installations.
 
 @example
 make install-strip
@@ -748,6 +750,11 @@ targets to uninstall info and PDF manuals in file
 Target @code{uninstall-tests} will uninstall any installed tests, as
 well as removing the directory @file{tests} containing the test results.
 
+An installed shared/static @code{libR} can be uninstalled by
+
+@example
+make prefix=/path/to/here uninstall-libR
+@end example
 
 
 @node Sub-architectures, Other Options, Uninstallation, Installing R under Unix-alikes
